@@ -3929,7 +3929,7 @@ void TMagicItem::evaluateMe(TBeing *ch) const
   int learn2 = learn;
   int learn3 = learn;
 
-  ch->learnFromDoingUnusual(LEARN_UNUSUAL_NORM_LEARN, SKILL_EVALUATE, 10);
+  ch->learnFromDoingUnusual(LEARN_UNUSUAL_NORM_LEARN, SKILL_EVALUATE, 7);
 
   // adjust for knowledge about magic stuff
   if (ch->hasClass(CLASS_RANGER)) {
