@@ -1,3 +1,7 @@
+07-31-21 : Learn by doing
+           - made subtle changes accross various parts of LBD all to mkae it easier
+           to hone skills. 
+
 07-29-21 : Hitpoints and locusts
            - Plague of locusts should work again
            - Player health gain is once again based on levels. All single class 50s
